--- a/src/index.html
+++ b/src/index.html
@@ -35,6 +35,8 @@
 <body>
     <div class="test-container"></div>
 
+    <button id="export">View track data (console)</button>
+
     <script type="module" src="script.js"></script>
 </body>
 </html>
