--- a/src/index.html
+++ b/src/index.html
@@ -24,6 +24,7 @@
             height: 100dvh;
             display: grid;
             place-items: center;
+            background: linear-gradient(45deg, #45a25f, #f4c547, #d76c22);
         }
 
         .test-container {
