timeline grid CSS update

--- a/src/index.html
+++ b/src/index.html
@@ -31,12 +31,19 @@
             width: 60dvw;
             height: 60dvh;
         }
+
+        button#export {
+            font-family: inherit;
+            padding: 2ch;
+            cursor: pointer;
+            border-radius: 1ch;
+        }
     </style>
 </head>
 <body>
     <div class="test-container"></div>
 
-    <button id="export">View track data (console)</button>
+    <button id="export">View track data (console log)</button>
 
     <script type="module" src="script.js"></script>
 </body>
