basic reset function

--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
     <div class="mixer-controls">
         <button id="export">View track data (console log)</button>
         <button id="delete">Delete track</button>
+        <button id="reset">Reset mixer</button>
     </div>
 
     <script type="module" src="script.js"></script>
